Decreased category font size

--- a/site/css/der.css
+++ b/site/css/der.css
@@ -97,6 +97,13 @@ td.token, td.rulecat {
 }
 
 
+/* category styling */
+
+td.cat, span.cat {
+	font-size: 90%;
+}
+
+
 /* print styles */
 
 @media print {
