Minimal styling for login form

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,8 +1,22 @@
-/* center contents */
+/* centered <main> with minimum width */
 
 main {
 	position: absolute;
 	left: 50%;
 	margin-right: -50%;
 	transform: translate(-50%);
+	min-width: 800px;
+}
+
+/* basic styles */
+
+body {
+	font-family: sans-serif;
+}
+
+/* form elements */
+
+input[type=text], input[type=password], input[type=submit] {
+	border: 1px solid black;
+	background: white;
 }
