--- a/site/css/main.css
+++ b/site/css/main.css
@@ -10,6 +10,10 @@ div.col-md-9 > h3:first-child {
 	margin-top: 0;
 }
 
+div.col-md-6 > h2:first-child {
+	margin-top: 0;
+}
+
 /* controls displayed above the user's derivation */
 
 div#derivation-controls > div {
@@ -22,4 +26,10 @@ div#derivation-controls::after {
 	content: '';
 	display: block;
 	clear: both;
+}
+
+/* comments */
+
+h2 span.label {
+	font-size: 10px;
 }
