Remove extra margins from derivations in manual
Swipers for span BOWs are now completely hidden until active. They were
already invisible in the manual for some reason I don't understand, but
their top margin was still there.

--- a/site/css/der.css
+++ b/site/css/der.css
@@ -50,9 +50,13 @@ div.der {
 	padding: 8px;
 }
 
-/* DETACH SPAN CONSTRAINT SELECTABLES ****************************************/
+/* SPAN SWIPERS: DON'T DISPLAY UNTIL ACTIVATED, THEN VISUALLY DETACH *********/
 
 td.span-swiper {
+	display: none;
+}
+
+td.span-swiper-active {
 	margin-top: 8px;
 	display: block;
 }
