--- a/site/css/der.css
+++ b/site/css/der.css
@@ -112,7 +112,7 @@ td.rulecat {
 }
 
 td.span-swiper {
-	background: rgb(119, 119, 119);
+	background: rgb(119, 119, 119); /* Bootstrap default gray */
 }
 
 /* CATEGORY STYLING **********************************************************/
